Quız Duzenleö Quız lıstele

--- a/KahootMvc/appsettings.json
+++ b/KahootMvc/appsettings.json
@@ -6,5 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {"SqlCon":"server=serafettin\\sqlexpress;database=WahootDb;trusted_connection=true;trust server certificate=true;"}
+  "ConnectionStrings": {
+    "SqlCon": "server=localhost;port=3306;database=WahootDb;user=root;password=150904;"
+  }
 }
