--- a/KahootMvc/docker-compose.yml
+++ b/KahootMvc/docker-compose.yml
@@ -5,13 +5,14 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    expose:
-      - "8080"
+    ports:
+      - "80:8080"
     depends_on:
       - db
     environment:
       - ConnectionStrings__SqlCon=server=db;port=3306;database=WahootDb;user=root;password=150904;
       - ASPNETCORE_ENVIRONMENT=Production
+    restart: always
 
   db:
     image: mysql:8
@@ -20,15 +21,7 @@ services:
       MYSQL_ROOT_PASSWORD: 150904
     volumes:
       - mysqldata:/var/lib/mysql
-
-  nginx:
-    image: nginx:latest
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-    depends_on:
-      - api
+    restart: always
 
 volumes:
   mysqldata:
